--- a/app/views/availabilities/new.html.erb
+++ b/app/views/availabilities/new.html.erb
@@ -7,16 +7,18 @@
           <td width="4%">
 
           </td>
-          <td>
+          <td width="20">
             <div style="color:black; font-weight: bold;">
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <%= f.check_box(:Monday,{:id => "Monday",:value => "Monday"}) %>
-                <%= label_tag "Monday" %>
+
+              <label class="checkbox inline">
+                <%= f.check_box(:Monday,{:id => "Monday",:value => "Monday"}) %>
+                Monday
+              </label>
             </div>
           </td>
-          <td  width="40%">
-            <div id="MondayDiv">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <td  width="70%">
+            <div id="MondayDiv" style = "margin-top: 10px">
+              
                 <%= f.select :mondayFrom,options_for_select([
                 	  ["1","1"],
                   	["2","2"],
@@ -30,11 +32,11 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeFromMon" %>
+                 ]), {},:id => "DDL_TimeFromMon", :class=>"input-small" %>
                 
-                <%= f.select :ddl_MonFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_MonFromAMPM" %>
+                <%= f.select :ddl_MonFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_MonFromAMPM",:class => "input-small" %>
                   
-                <%= label(:to, " to", {}, { :class => "labelTo" }) %>
+                to
                 <%= f.select :mondayTo,options_for_select([
                     ["1","1"],
                 	  ["2","2"],
@@ -48,9 +50,9 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeToMon" %>
+                 ]), {},:id => "DDL_TimeToMon",:class => "input-small" %>
 
-                 <%= f.select :ddl_MonToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_MonToAMPM"  %>
+                 <%= f.select :ddl_MonToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_MonToAMPM",:class => "input-small"  %>
             </div>
           </td>
           <td width="28%">
@@ -63,14 +65,16 @@
           </td>
           <td>
             <div style="color:black;">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            	<%= f.check_box(:Tuesday,{:id => "Tuesday",:value => "Tuesday"}) %>
-                <%= label_tag "Tuesday" %>
+              <label class="checkbox inline">
+            	 <%= f.check_box(:Tuesday,{:id => "Tuesday",:value => "Tuesday"}) %>
+               
+                Tuesday
+              </label>
             </div>
           </td>
           <td>
-            <div id="TuesdayDiv">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="TuesdayDiv" style ="margin-top: 10px">
+
                 <%= f.select :tuesdayFrom,options_for_select([
                 	  ["1","1"],
                 	  ["2","2"],
@@ -84,11 +88,11 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeFromTue" %>
+                 ]), {},:id => "DDL_TimeFromTue",:class=>"input-small" %>
                 
-                <%= f.select :ddl_TueFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_MonFromAMPM" %>
+                <%= f.select :ddl_TueFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_MonFromAMPM",:class=>"input-small" %>
                   
-                <%= label(:to, " to", {}, { :class => "labelTo" }) %>
+                to
                 <%= f.select :tuesdayTo,options_for_select([
                     ["1","1"],
                 	  ["2","2"],
@@ -102,9 +106,9 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeToTue" %>
+                 ]), {},:id => "DDL_TimeToTue",:class => "input-small"%>
 
-                 <%= f.select :ddl_TueToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_TueToAMPM"  %>
+                 <%= f.select :ddl_TueToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_TueToAMPM",:class=>"input-small"  %>
             </div>
           </td>
           <td width="28%">
@@ -117,14 +121,15 @@
           </td>
           <td>
             <div style="color:black;">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            	<%= f.check_box(:Wednesday,{:id => "Wednesday",:value => "Wednesday"}) %>
-                <%= label_tag "Wednesday" %>
+              <label class="checkbox inline">
+                <%= f.check_box(:Wednesday,{:id => "Wednesday",:value => "Wednesday"}) %>
+                Wednesday
+              </label>
             </div>
           </td>
           <td>
-            <div id="WednesdayDiv">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="WednesdayDiv" style ="margin-top: 10px">
+
                 <%= f.select :wednesdayFrom,options_for_select([
                 	  ["1","1"],
                 	  ["2","2"],
@@ -138,11 +143,11 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeFromWed" %>
+                 ]), {},:id => "DDL_TimeFromWed",:class => "input-small" %>
                 
-                <%= f.select :ddl_WedFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_MonFromAMPM" %>
+                <%= f.select :ddl_WedFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_MonFromAMPM",:class => "input-small" %>
                   
-                <%= label(:to, " to", {}, { :class => "labelTo" }) %>
+                to
                 <%= f.select :wednesdayTo,options_for_select([
                     ["1","1"],
                 	  ["2","2"],
@@ -156,9 +161,9 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeToWed" %>
+                 ]), {},:id => "DDL_TimeToWed",:class=>"input-small" %>
 
-                 <%= f.select :ddl_WedToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_MonToAMPM"  %>
+                 <%= f.select :ddl_WedToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_MonToAMPM",:class =>"input-small"  %>
             </div>
           </td>
           <td width="28%">
@@ -171,14 +176,15 @@
           </td>
           <td>
             <div style="color:black;">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            	<%= f.check_box(:Thursday,{:id => "Thursday",:value => "Thursday"}) %>
-                <%= label_tag "Thursday" %>
+              <label class="checkbox inline">
+                <%= f.check_box(:Thursday,{:id => "Thursday",:value => "Thursday"}) %>
+                Thursday
+              </label>
             </div>
           </td>
           <td>
-            <div id="ThursdayDiv">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="ThursdayDiv" style ="margin-top: 10px">
+              
                 <%= f.select :thursdayFrom,options_for_select([
                 	  ["1","1"],
                 	  ["2","2"],
@@ -192,11 +198,11 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeFromThur" %>
+                 ]), {},:id => "DDL_TimeFromThur",:class=>"input-small" %>
                 
-                <%= f.select :ddl_ThurFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_MonFromAMPM" %>
+                <%= f.select :ddl_ThurFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_MonFromAMPM",:class=>"input-small" %>
                   
-                <%= label(:to, " to", {}, { :class => "labelTo" }) %>
+                to
                 <%= f.select :thursdayTo,options_for_select([
                     ["1","1"],
                 	  ["2","2"],
@@ -210,9 +216,9 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeToThur" %>
+                 ]), {},:id => "DDL_TimeToThur",:class=>"input-small" %>
 
-                 <%= f.select :ddl_ThurToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_ThurToAMPM"  %>
+                 <%= f.select :ddl_ThurToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_ThurToAMPM",:class=>"input-small"  %>
             </div>
           </td>
           <td width="28%">
@@ -225,14 +231,15 @@
           </td>
           <td>
             <div style="color:black;">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            	<%= f.check_box(:Friday,{:id => "Friday",:value => "Friday"}) %>
-                <%= label_tag "Friday" %>
+              <label class="checkbox inline">
+                <%= f.check_box(:Friday,{:id => "Friday",:value => "Friday"}) %>
+                Friday
+              </label>
             </div>
           </td>
           <td>
-            <div id="FridayDiv">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="FridayDiv" style ="margin-top: 10px">
+              
                 <%= f.select :fridayFrom,options_for_select([
                 	  ["1","1"],
                 	  ["2","2"],
@@ -246,11 +253,11 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeFromFri" %>
+                 ]), {},:id => "DDL_TimeFromFri",:class=>"input-small" %>
                 
-                <%= f.select :ddl_FriFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_FriFromAMPM" %>
+                <%= f.select :ddl_FriFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_FriFromAMPM",:class=>"input-small" %>
                   
-                <%= label(:to, " to", {}, { :class => "labelTo" }) %>
+                to
                 <%= f.select :fridayTo,options_for_select([
                     ["1","1"],
                 	  ["2","2"],
@@ -264,9 +271,9 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeToFri" %>
+                 ]), {},:id => "DDL_TimeToFri",:class=>"input-small" %>
 
-                 <%= f.select :ddl_FriToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_FriToAMPM"  %>
+                 <%= f.select :ddl_FriToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_FriToAMPM",:class=>"input-small"  %>
             </div>
           </td>
           <td width="28%">
@@ -279,14 +286,15 @@
           </td>
           <td>
             <div style="color:black;">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            	<%= f.check_box(:Saturday,{:id => "Saturday",:value => "Saturday"}) %>
-                <%= label_tag "Saturday" %>
+              <label class="checkbox inline">
+            	 <%= f.check_box(:Saturday,{:id => "Saturday",:value => "Saturday"}) %>
+                Saturday
+              </label>
             </div>
           </td>
           <td>
-            <div>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div style ="margin-top: 10px">
+              
                 <%= f.select :saturdayFrom,options_for_select([
                 	  ["1","1"],
                 	  ["2","2"],
@@ -300,11 +308,11 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeFromSat" %>
+                 ]), {},:id => "DDL_TimeFromSat",:class=>"input-small" %>
                 
-                <%= f.select :ddl_SatFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_SatFromAMPM" %>
+                <%= f.select :ddl_SatFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_SatFromAMPM",:class=>"input-small" %>
                   
-                <%= label(:to, " to", {}, { :class => "labelTo" }) %>
+                to
                 <%= f.select :saturdayTo,options_for_select([
                     ["1","1"],
                 	  ["2","2"],
@@ -318,9 +326,9 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeToSat" %>
+                 ]), {},:id => "DDL_TimeToSat",:class=>"input-small" %>
 
-                 <%= f.select :ddl_SatToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_SatToAMPM"  %>
+                 <%= f.select :ddl_SatToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_SatToAMPM",:class=>"input-small"  %>
             </div>
           </td>
           <td width="28%">
@@ -333,14 +341,15 @@
           </td>
           <td>
             <div style="color:black;">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            	<%= f.check_box(:Sunday,{:id => "Sunday",:value => "Sunday"}) %>
-                <%= label_tag "Sunday" %>
+              <label class="checkbox inline">
+                <%= f.check_box(:Sunday,{:id => "Sunday",:value => "Sunday"}) %>
+                Sunday
+              </label>
             </div>
           </td>
           <td>
-            <div  id="SundayDiv">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div  id="SundayDiv" style ="margin-top: 10px">
+              
                 <%= f.select :sundayFrom,options_for_select([
                 	  ["1","1"],
                 	  ["2","2"],
@@ -354,11 +363,11 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeFromSun" %>
+                 ]), {},:id => "DDL_TimeFromSun",:class=>"input-small" %>
                 
-                <%= f.select :ddl_SunFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_SunFromAMPM" %>
+                <%= f.select :ddl_SunFromAMPM ,options_for_select([["AM","AM"],["PM","PM"]]),{}, :id => "ddl_SunFromAMPM",:class=>"input-small" %>
                   
-                <%= label(:to, " to", {}, { :class => "labelTo" }) %>
+                to
                 <%= f.select :sundayTo,options_for_select([
                     ["1","1"],
                 	  ["2","2"],
@@ -372,9 +381,9 @@
                     ["10","10"],
                     ["11","11"],
                     ["12","12"],
-                 ]), {},:id => "DDL_TimeToSun" %>
+                 ]), {},:id => "DDL_TimeToSun",:class => "input-small" %>
 
-                 <%= f.select :ddl_SunToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_SunToAMPM"  %>
+                 <%= f.select :ddl_SunToAMPM ,options_for_select([["AM","AM"],["PM","PM"]]), {}, :id => "ddl_SunToAMPM",:class=>"input-small"  %>
             </div>
           </td>
           <td width="28%">
@@ -383,7 +392,7 @@
       </tr>
       
 </table>
-<table width="92%">
+<table width="92%" border>
             <tr>
       	       <td align="center">
                   <div class="button" style="margin-right:60px;">
