--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -9,7 +9,7 @@
 <tr>
 <td align="center">
     <%= text_field_tag :email, params[:email] %>
-    <%= submit_tag "Send", :style => "width:100px; height:35px; color:white; background-color:Black; border-style: none; font-size:medium;" %>
+    <%= submit_tag "Send", :style => "width:100px; height:35px; color:white; background-color:Black; border-style: none; font-size:medium;margin-top: -10px" %>
 </td>
 </tr>
 </table>
