--- a/app/views/settings/new.html.erb
+++ b/app/views/settings/new.html.erb
@@ -22,8 +22,8 @@
                 + "<tr><td align='center' style='font-size:large;color:#212121;' >"
                 newRow1 += "<button type='button' class='btn_rmv'>Remove</button></td></tr>";
 
-                var input = "<input name='parameters["+ updated_row_num +"]' id='field' type='text' />";
-                var input1 = "<input name='parametersCompany["+ updated_row_num +"]' id='field' type='text' />"
+                var input = "<input name='parameters["+ updated_row_num +"]' id='field' type='text' style='width:100px' />";
+                var input1 = "<input name='parametersCompany["+ updated_row_num +"]' id='field' type='text' style='width:100px' />"
                 var newRow = "<tr><td align='center' style='font-size: large; color: #212121;' >"
                 + input + " at " + input1 + "</td></tr>";
                 $('#controls').append(newRow);
@@ -66,7 +66,7 @@
                 newRow1 += "<input type='button' class='btn_rmvsch' value='Remove'/></td></tr>";
 
 
-                var input1 = "<input name='parametersSch["+ updated_row_num +"]' id='field' type='text' />"
+                var input1 = "<input name='parametersSch["+ updated_row_num +"]' id='field' type='text' style='width:100px' />"
                 var newRow = "<tr><td align='center' style='font-size: x-large; color: #212121;' >" + input1 + "</td></tr>";
                 $('#ControlsSch').append(newRow);
                 $('#ControlsSch').append(newRow1);
@@ -89,52 +89,87 @@
 
 <%= form_for :settings, :url => {:action => :create}, :html=> {:multipart => true} do |f| %>
 
-<table>
+<table align="center" width="100%">
       <tr>
          <td width="20%">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          </td>
-         <td width="75%" align="left" style="vertical-align: bottom; color: #212121;" class="style6">
+         
             
             <% if @user_basic.SkillType.to_s == "1" %>
-                <%= check_box_tag :Skilltype, @user_basic.id, true %>
-                <%= label(:SkillType, " Students") %>
+            <td align="left" style="vertical-align: bottom; color: #212121;" class="style6">
+                <label class="checkbox inline">
+                    <%= check_box_tag :Skilltype, @user_basic.id, true %>
+                    Students
+                </label>
+            </td>
+            <td>
                 <%= select_tag :user_Need,options_from_collection_for_select(@students, "id", "student_mentor_subjects",@user_basic.user_Need) ,:id => "DDL_Students" %>
+            </td>
             <% else %>
-                <%= check_box_tag :Skilltype, @user_basic.id, false %>
-                <%= label(:SkillType, " Students") %>
+            <td>
+                <label class="checkbox inline">
+                    <%= check_box_tag :Skilltype, @user_basic.id, false %>
+                    Students
+                </label>
+            </td>
+            <td>
                 <%= select_tag :user_Need,options_from_collection_for_select(@students, "id", "student_mentor_subjects") ,:id => "DDL_Students" %>
+            </td>
             <% end %>
-         </td>
+         
         </tr>
       <tr>
          <td>
          </td>
-         <td>
+         
             <% if @user_basic.SkillType1.to_s == "1" %>
-                 <%= check_box_tag 'Skilltype1', @user_basic.id,true %>
-                <%= label(:SkillType1, " Entrepreneurs") %>
+            <td>
+                <label class="checkbox inline">
+                    <%= check_box_tag 'Skilltype1', @user_basic.id,true %>
+                    Entrepreneurs
+                </label>
+            </td>
+            <td>
                 <%= select_tag :SkillNeed1,options_from_collection_for_select(@entrepreneurs, "id", "entrepreneurs_mentor_subjects",@user_basic.SkillNeed1) ,:id => "DDL_Entrepreneurs" %>
+            </td>
             <% else %>
-                <%= check_box_tag 'Skilltype1', @user_basic.id, false %>
-                <%= label(:SkillType1, " Entrepreneurs") %>
+            <td>
+                <label class="checkbox inline">
+                    <%= check_box_tag 'Skilltype1', @user_basic.id, false %>
+                    Entrepreneurs
+                </label>
+            </td>
+            <td>
                 <%= select_tag :SkillNeed1,options_from_collection_for_select(@entrepreneurs, "id", "entrepreneurs_mentor_subjects") ,:id => "DDL_Entrepreneurs" %>
+            </td>
             <% end %>
-         </td>
        
       </tr>
       <tr>
          <td>
          </td>
-         <td>
+         
             <% if @user_basic.SkillType2.to_s == "1" %>
-                <%= check_box_tag 'Skilltype2', @user_basic.id, true %>
-                <%= label(:SkillType2, " Veterans") %>
+            <td>
+                <label class="checkbox inline">
+                    <%= check_box_tag 'Skilltype2', @user_basic.id, true %>
+                    Veterans
+                </label>
+            </td>
+            <td>
                 <%= select_tag :SkillNeed2,options_from_collection_for_select(@veterans, "id", "veteran_mentor_subjects",@user_basic.SkillNeed1) ,:id => "DDL_Veterans" %>
+            </td>
             <% else %>
-                <%= check_box_tag 'Skilltype2', @user_basic.id, false %>
-                <%= label(:SkillType2, " Veterans") %>
+            <td>
+                <label class="checkbox inline">
+                    <%= check_box_tag 'Skilltype2', @user_basic.id, false %>
+                    Veterans
+                </label>
+            </td>
+            <td>
                 <%= select_tag :SkillNeed2,options_from_collection_for_select(@veterans, "id", "veteran_mentor_subjects") ,:id => "DDL_Veterans" %>
+            </td>
             <% end %>
          </td>
            
@@ -171,9 +206,9 @@
                                 </script>
                                 <tr>
                                    <td>
-                                      <input type="text" name="tf_designation[<%= i %>" value="<%=  user_prof.Designation %>" style="">
+                                      <input type="text" name="tf_designation[<%= i %>" value="<%=  user_prof.Designation %>" style="width:100px">
                                       at
-                                      <input type="text" name="tf_company[<%= i %>]" value="<%= user_prof.Company %>" style=""><br/>
+                                      <input type="text" name="tf_company[<%= i %>]" value="<%= user_prof.Company %>" style="width:100px"><br/>
                                    </td>
                                 </tr>
                                 <tr>
@@ -218,8 +253,8 @@
                                 //alert(updated_row_num);
                                 </script>
                                   <tr> 
-                                     <td>
-                                        <input type="text" name="tf_education[<%= i %>]" value="<%= user_ed.SchoolName %>"><br/>
+                                     <td align="center">
+                                        <input type="text" name="tf_education[<%= i %>]" value="<%= user_ed.SchoolName %>" style="width:100px"><br/>
                                      </td>
                                   </tr>
                                   <tr>
@@ -455,71 +490,68 @@
             <table>
                 <tr>
                     <td>
-                        <%= check_box(:ChkBx_Location,{:id => "ChkBx_Location",:value => "Location"}) %>
-                        <%= label(:lb_Location, "Location") %>
+                        <label class="checkbox inline">
+                            <%= check_box(:ChkBx_Location,{:id => "ChkBx_Location",:value => "Location"}) %>
+                            Location
+                        </label>
                     </td>
                 </tr>
             </table>
-            <table>
-                <% pro = 0 %>
+            <table >
                 <% if @user_profession.blank? %>
                     <tr>
                         <td>
-                            <%= check_box_tag 'ChkBx_Profession' %>
-                            <%= label(:lb_Profession, "Profession") %>
+                            <label class="checkbox inline">
+                                <%= check_box_tag 'ChkBx_Profession' %>
+                                Profession
+                            </label>
                         </td>
                     </tr>
                 <% else %>
                     <% @user_profession.each do |p| %>
                         <tr> 
                             <td>
-                            <% pro = 1 %>
-                            <% if pro == 1 %>
                             <% if !p.Designation.blank? and p.Private?.to_s == "1" %>
-                                <input type="checkbox" name="ChkBx_Profession"
-                                id="ChkBx_Profession" value="1" checked = "checked">
-                                <%= label(:lb_Profession, "Profession") %>
+                                <label class="checkbox inline">
+                                    <input type="checkbox" name="ChkBx_Profession" id="ChkBx_Profession" value="1" checked = "checked">
+                                    Profession
+                                </label>
                             <% elsif !p.Designation.blank? and p.Private?.to_s == "0" %>
-                                <%= check_box_tag 'ChkBx_Profession' %>
-                                <%= label(:lb_Profession, "Profession") %>
+                                <label class="checkbox inline">
+                                    <%= check_box_tag 'ChkBx_Profession' %>
+                                    Profession
+                                </label>
                              <% end %>
-                             <% end %>
-                            <% if pro == 0 %>    
-                                <%= check_box_tag 'ChkBx_Profession' %>
-                                <%= label(:lb_Profession, "Profession") %>
-                            <% end %>
                             </td>
                         </tr>
                     <% end %>
                 <% end %>
             </table>
-            <table>
-                <% edu = 0 %>
+            <table >
                 <% if @user_education.blank? %>
                     <tr>
                         <td>
-                            <%= check_box_tag 'ChkBx_Education' %>
-                            <%= label(:lb_Educarion, "Education") %>
+                            <label class="checkbox inline">
+                                <%= check_box_tag 'ChkBx_Education' %>
+                                Education
+                            </label>
                         </td>
                     </tr>
                 <% else %>
                     <% @user_education.each do |e| %>
                         <tr>
                             <td>
-                            <% edu = 1 %>
-                            <% if edu == 1 %>
                             <% if !e.SchoolName.blank? and e.Private?.to_s == "1" %>
+                                <label class="checkbox inline">
                                     <input type="checkbox" name="ChkBx_Education"
                                     id="ChkBx_Education" value="1" checked = "checked">
-                                    <%= label(:lb_Education, "Education") %>
+                                    Education
+                                </label>
                             <% elsif !e.SchoolName.blank? and e.Private?.to_s == "0" %>
+                                <label class="checkbox inline">
                                     <%= check_box_tag 'ChkBx_Education' %>
-                                    <%= label(:lb_Educarion, "Education") %>
-                            <% end %>
-                            <% end %>
-                            <% if edu == 0 %>
-                            <%= check_box_tag 'ChkBx_Education' %>
-                            <%= label(:lb_Educarion, "Education") %>
+                                    Education
+                                </label>
                             <% end %>
                             </td>
                         </tr>
@@ -537,9 +569,10 @@
                 <tr>
                     <% phone = 1 %>
                     <td>
-                        <input type="checkbox" name="ChkBx_Phone"
-                    id="ChkBx_Phone" value="1" checked = "checked">
-                        <%= label(:lb_Phone, "Phone") %>
+                        <label class="checkbox inline">
+                            <input type="checkbox" name="ChkBx_Phone" id="ChkBx_Phone" value="1" checked = "checked">
+                            Phone
+                        </label>
                     </td>
                 </tr>
                      <% end %>
@@ -547,9 +580,10 @@
                 <tr>
                     <% email = 1 %>
                     <td>
-                    <input type="checkbox" name="ChkBx_Email"
-                    id="ChkBx_Email" value="1" checked = "checked">
-                    <%= label(:lb_Email, "Email") %>
+                        <label class="checkbox inline">
+                            <input type="checkbox" name="ChkBx_Email" id="ChkBx_Email" value="1" checked = "checked">
+                            Email
+                        </label>
                     </td>
                 </tr>
                     <% end %>
@@ -557,9 +591,10 @@
                 <tr>
                     <% skype = 1 %>
                     <td>
-                    <input type="checkbox" name="ChkBx_Skype"
-                    id="ChkBx_Skype" value="1" checked = "checked">
-                    <%= label(:lb_Skype, "Skype") %>
+                        <label class="checkbox inline">
+                            <input type="checkbox" name="ChkBx_Skype" id="ChkBx_Skype" value="1" checked = "checked">
+                            Skype
+                        </label>
                     </td>
                 </tr>
                     <% end %>
@@ -567,9 +602,10 @@
                 <tr>
                     <% website = 1 %>
                     <td>
-                    <input type="checkbox" name="ChkBx_Website"
-                    id="ChkBx_Website" value="1" checked = "checked">
-                    <%= label(:lb_Website, "Website") %>
+                        <label class="checkbox inline">
+                            <input type="checkbox" name="ChkBx_Website" id="ChkBx_Website" value="1" checked = "checked">
+                            Website
+                        </label>
                     </td>
                 </tr>
                     <% end %>
@@ -577,9 +613,10 @@
                     <tr>
                         <% twitter = 1 %>
                         <td>
-                    <input type="checkbox" name="ChkBx_Twitter"
-                    id="ChkBx_Twitter" value="1" checked = "checked">
-                    <%= label(:lb_Twitter, "Twitter") %>
+                            <label class="checkbox inline">
+                                <input type="checkbox" name="ChkBx_Twitter" id="ChkBx_Twitter" value="1" checked = "checked">
+                                Twitter
+                            </label>
                         </td>
                     </tr>
                     <% end %>
@@ -587,40 +624,50 @@
                     <% if phone == 0 %>
                     <tr>
                         <td>
-                            <%= check_box_tag 'ChkBx_Phone' %>
-                            <%= label(:lb_Phone, "Phone") %>
+                            <label class="checkbox inline">
+                                <%= check_box_tag 'ChkBx_Phone' %>
+                                Phone
+                            </label>
                         </td>
                     </tr>
                     <% end %>
                     <% if email == 0 %>
                     <tr>
                         <td>
-                            <%= check_box_tag 'ChkBx_Email' %>
-                            <%= label(:lb_Email, "Email") %>
+                            <label class="checkbox inline">
+                                <%= check_box_tag 'ChkBx_Email' %>
+                                Email
+                            </label>
                         </td>
                     </tr>
                     <% end %>
                     <% if skype == 0 %>
                     <tr>
                         <td>
-                            <%= check_box_tag 'ChkBx_Skype' %>
-                            <%= label(:lb_Skype, "Skype") %>
+                            <label class="checkbox inline">
+                                <%= check_box_tag 'ChkBx_Skype' %>
+                                <%= label(:lb_Skype, "Skype") %>
+                            </label>
                         </td>
                     </tr>
                     <% end %>
                     <% if website == 0 %>
                     <tr>
                         <td>
-                            <%= check_box_tag 'ChkBx_Website' %>
-                            <%= label(:lb_Website, "Website") %>
+                            <label class="checkbox inline">
+                                <%= check_box_tag 'ChkBx_Website' %>
+                                Website
+                            </label>
                         </td>
                     </tr>
                     <% end %>
                     <% if twitter == 0 %>
                     <tr>
                         <td>
-                            <%= check_box_tag 'ChkBx_Twitter' %>
-                            <%= label(:lb_Twitter, "Twitter") %>
+                            <label class="checkbox inline">
+                                <%= check_box_tag 'ChkBx_Twitter' %>
+                                Twitter
+                            </label>
                         </td>
                     </tr>
                     <% end %>
