--- a/app/views/static_pages/default.html.erb
+++ b/app/views/static_pages/default.html.erb
@@ -1,13 +1,13 @@
-<table align="center" width="85%" style="margin-left40px;" >
+<table align="center" width="87%" style="margin-left40px;">
 <tr>
-   <td style="color: #212121;">
+  <td style="color: #212121" width="50%" align="center">
+    <div class="button" align="center">
+      <%= button_to "Search", '/searching', {method: :get, :class => "buttonhome",:style => "width:200px;height:80px"} %>
+    </div>
+  </td>
+  <td style="color: #212121;">
  <div class="button">
-      <%= button_to "Search", '/searching', {method: :get, :class => "buttonhome"} %>
- </div>
-   </td>
-   <td style="color: #212121;">
- <div class="button">
-      <%= button_to "Pending Request", '/pendingrequest', { method: :get, :class => "buttonhome" } %>
+      <%= button_to "Pending Request", '/pendingrequest', { method: :get, :class => "buttonhome",:style => "width:200px;height:80px" } %>
  </div>
    </td>
 </tr>
@@ -15,12 +15,12 @@
 <tr>
    <td style="color: #212121;">
     <div class="button">
-      <%= button_to "Connections", '/connection', { method: :get, :class => "buttonhome" } %>
+      <%= button_to "Connections", '/connection', { method: :get, :class => "buttonhome",:style => "width:200px;height:80px" } %>
  </div>
     </td>
    <td style="color: #212121;">
     <div class="button">
-      <%= button_to "Profile", '/profile', { method: :get, :class => "buttonhome" } %>
+      <%= button_to "Profile", '/profile', { method: :get, :class => "buttonhome",:style => "width:200px;height:80px" } %>
  </div>
     </td>
 </tr>
@@ -29,12 +29,12 @@
    <td style="color: #212121;">
     <div class="button">
       
-      <%= button_to "Settings", '/settings', {method: :get, :class => "buttonhome"} %>
+      <%= button_to "Settings", '/settings', {method: :get, :class => "buttonhome",:style => "width:200px;height:80px"} %>
  </div>
    </td>
    <td style="color: #212121;">
     <div class="button">
-      <%= button_to "Request I have Sent", '/sentrequest', { method: :get, :class => "buttonhome" } %>
+      <%= button_to "Request I have Sent", '/sentrequest', { method: :get, :class => "buttonhome",:style => "width:200px;height:80px" } %>
  </div>
    </td>
 </tr>
