--- a/app/views/static_pages/pending_request.html.erb
+++ b/app/views/static_pages/pending_request.html.erb
@@ -92,10 +92,10 @@
 </table>
 <% end %>
 <% end %>
-<table width="25%" align="center" style="margin-left:240px" >
+<table width="100%" align="center" >
 <tr>
-        <td>
-            <div class="button">
+        <td align="center">
+            <div style="background-color:#33b5e5;border-radius:15px; display:inline-block; color: white; font-family: Raleway; font-size:15px; padding:14px 30px; text-decoration: none;  text-align:center;">
                     <%= link_to "Back", "/default", { :class => "buttonBack"} %>
             </div>
         </td>
