--- a/app/views/availabilities/new.html.erb
+++ b/app/views/availabilities/new.html.erb
@@ -392,7 +392,7 @@
       </tr>
       
 </table>
-<table width="92%" border>
+<table width="92%">
             <tr>
       	       <td align="center">
                   <div class="button" style="margin-right:60px;">
